--- a/sito/INGLESE/serra1baseinglese.html
+++ b/sito/INGLESE/serra1baseinglese.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>SPROUT</title>
-    <meta charset= "utf-32" />
+    <meta charset= "utf-8" />
     <meta name="author" content="3ci diurno" />
     <meta name="description" content="..." />
     <meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
@@ -52,7 +52,7 @@
 
         <hr class="a" />
         <div id="menu">
-            <!--Menù di navigazione-->
+            <!--Menï¿½ di navigazione-->
             <div class="testo">
                 <a href="index.html">MEN&Ugrave;</a>
             </div>
@@ -116,7 +116,7 @@
                         <p class="pno">Scelta colore vetro(trasparente o no)</p>
                         <p class="pno">Pellicola anti-marcimento</p>
                         <hr class="ahr" />
-                        <p class="aprezzo">159,99 €</p>
+                        <p class="aprezzo">159,99 ï¿½</p>
                     </div>
 
                     <div class="a1">
@@ -145,7 +145,7 @@
                         <p class="pno">Scelta colore vetro(trasparente o no)</p>
                         <p class="pno">Pellicola anti-marcimento</p>
                         <hr class="ahr" />
-                        <p class="aprezzo">199,99 €</p>
+                        <p class="aprezzo">199,99 ï¿½</p>
                     </div>
                     <div class="a1">
 
@@ -174,7 +174,7 @@
                         <p class="ap">Scelta colore vetro(trasparente o no)</p>
                         <p class="ap">Pellicola anti-marcimento</p>
                         <hr class="ahr" />
-                        <p class="aprezzo">269,99 €</p>
+                        <p class="aprezzo">269,99 ï¿½</p>
                     </div>
                     <div class="abuy">
                         <p><strong>COMPRA</strong></p>
