--- a/sito/ITALIANO/modellografico.html
+++ b/sito/ITALIANO/modellografico.html
@@ -100,19 +100,21 @@
     
   <script>
     
-  const temp = JSON.parse(mediana_um); // collego file json con rispettivi valori
+  const um = JSON.parse(mediana_um); // collego file json con rispettivi valori
+  const moda = JSON.parse(moda_um);
+  const mediaUm = JSON.parse(media_um);
 
     // PRIMO GRAFICO /////////////////////////////////////////////////////////////
     const ctx = document.getElementById('myChart').getContext('2d');
     const myChart = new Chart(ctx, {
       type: 'line',
       data:{
-          labels: ['giorno 1', 'giorno 2 ', 'giorno 3', 'giorno 4', 'giorno 5', 'giorno 8', 'giorno 9', 'giorno 10', 'giorno 11', 'giorno 12', 'giorno 13', 'giorno 14', 'giorno 15', 'giorno 16', 'giorno 17', 'giorno 18', 'giorno 19', 'giorno 20', 'giorno 21', 'giorno 22', 'giorno 23', 'giorno 24', 'giorno 25', 'giorno 26', 'giorno 27', 'giorno 28', 'giorno 29', 'giorno 30', 'giorno 31'],
+          labels: ['giorno 1', 'giorno 2 ', 'giorno 3', 'giorno 4'],
           datasets: [{
-            label: 'moda',
-            data: [temp[0].valore, temp[1].valore, temp[2].valore],  // collegamento con il file json, array e loro valori
+            label: 'mediana',
+            data: [um[0].valore, um[1].valore, um[2].valore, um[3].valore],  // collegamento con il file json, array e loro valori
             backgroundColor: ['rgba(255, 99, 11, 0.2)', 
-                              'rgba(54, 162, 235, 0.2)', 
+                              'rgba(54, 162, 235, 0.1)', 
                               'rgba(255, 206, 86, 0.2)',
                               'rgba(75, 192, 192, 0.2)',
             ],
@@ -120,14 +122,12 @@
                               'rgba(255, 99, 132, 1)', 
                               'rgba(54, 162, 235, 1)', 
                               'rgba(255, 206, 86, 1)',
-                              'rgba(75, 192, 192, 1)',
-                              'rgba(153, 102, 255, 1)',
-                              'rgba(255, 159, 64, 1)' 
+                              'rgba(75, 192, 192, 1)', 
             ],
             borderWidth: 3
           },{
             label: 'media',
-            data: [28, 48, 40, 222], //valori temperatura
+            data: [mediaUm[0].valore, mediaUm[1].valore, mediaUm[2].valore, mediaUm[3].valore], 
             fill: true,
             backgroundColor: 'rgba(54, 162, 235, 0.2)',
             borderColor: 'rgb(54, 162, 235)',
@@ -139,10 +139,10 @@
 
 
           },{
-            label: 'mediana',
-            data: [83, 44, 6, 2], //valori temperatura
+            label: 'moda',
+            data: [moda[0].valore, moda[1].valore, moda[2].valore, moda[3].valore], //valori temperatura
             fill: true,
-            backgroundColor: 'rgb(0, 255, 0)',
+            backgroundColor: 'rgb(0, 0, 0, 0.2)',
             borderColor: 'rgb(0, 80, 0)',
             pointBackgroundColor: 'rgb(230, 255, 230)',
             pointBorderColor: 'rgb(230, 255, 230)', // colore punti
@@ -172,7 +172,7 @@
     // SECONDO GRAFICO /////////////////////////////////////////////////////////
     const ctx1 = document.getElementById('myChart1').getContext('2d');
     const myChart1 = new Chart(ctx1, {
-      type: 'line',
+      type: 'bar',
       data:{
         labels: ['giorno 1', 'giorno 2 ', 'giorno 3', 'giorno 4', 'giorno 5', 'giorno 8', 'giorno 9', 'giorno 10', 'giorno 11', 'giorno 12', 'giorno 13', 'giorno 14', 'giorno 15', 'giorno 16', 'giorno 17', 'giorno 18', 'giorno 19', 'giorno 20', 'giorno 21', 'giorno 22', 'giorno 23', 'giorno 24', 'giorno 25', 'giorno 26', 'giorno 27', 'giorno 28', 'giorno 29', 'giorno 30', 'giorno 31'],
           datasets: [{
