--- a/sito/INGLESE/logininglese.html
+++ b/sito/INGLESE/logininglese.html
@@ -10,6 +10,18 @@
 	<link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 	<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 	<link rel="icon" type="image/x-icon" href="../immagini/logo.png">
+	<link href="../login.css" type="text/css" rel="stylesheet" />
+		<script type="text/javascript">
+			function mostraMessaggio() {
+				var password=document.getElementById("password").value;
+				var username=document.getElementById("username").value;
+				if(username.length>=8&&username.length<=20&&password.length>=8) 
+			window.alert("Registrazione completata");
+			else{
+				window.alert("Qualcosa è andato storto,controlla il numero di caratteri e riprova");
+			}
+			}
+			</script>
 </head>
 
 
@@ -98,7 +110,17 @@
 		<!--Il corpo del sito-->
 		<section class="layout">
 			<div class="leftSide"></div>
-			<div class="body"></div>
+			<div class="body">
+				<div class="p">
+					<form >
+						<h1>Sign in</h1>
+						<input type="text" id="username" placeholder="Nome (da 8 a 20 caratteri)" name="username" maxlength="20" minlength="8" required>
+						<input type="password" id="password" placeholder="Password (minimo di 8 caratteri)" name="password" minlength="8" required>
+						<input type="button" value="Registrati" class="b" onclick="mostraMessaggio()">
+						<!--<button type="submit" name="register">Registrati</button>-->
+					</form>
+				</div>
+			</div>
 			<div class="rightSide"></div>
 			<div class="footer">
 				<div id="copyblock">
