--- a/sito/INGLESE/indexinglese.html
+++ b/sito/INGLESE/indexinglese.html
@@ -81,7 +81,7 @@
 				  <a href ="inostriprodottiinglese.html">OUR PRODUCTS</a>
 				</div>
 				<div class="testo">
-					<a href="arduionoallabaseinglese.html">ARDUINO</a>
+					<a href="arduinoinglese.html">ARDUINO</a>
 				</div>
 				<div class="testo">
 					<a href="logininglese.html">LOGIN</a>
