--- a/sito/INGLESE/inostriprodottiinglese.html
+++ b/sito/INGLESE/inostriprodottiinglese.html
@@ -33,11 +33,11 @@
 				<ul>
 					<!-- lista principale: definisce il menu nella sua interezza -->
 					<li>
-						<a class="lingua">Lingua</a> <!-- primo list-item, prima voce del menu -->
+						<a class="lingua">Language</a> <!-- primo list-item, prima voce del menu -->
 						<ul>
 							<!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="index.html">Italiano</a></li>
-							<li><a href="../inglese/indexinglese.html">Inglese</a></li>
+							<li><a href="index.html">Italian</a></li>
+							<li><a href="../inglese/indexinglese.html">English</a></li>
 						</ul> <!-- Fine del sotto-menu -->
 					</li> <!-- Chiudo il list-item -->
 					<!--qui altri list-item -->
@@ -65,7 +65,7 @@
 				<a href="inostriprodottiinglese.html" class="menuz">OUR PRODUCTS</a>
 			</div>
 			<div class="testo">
-				<a href="arduionoallabaseinglese.html">ARDUINO</a>
+				<a href="arduinoinglese.html">ARDUINO</a>
 			</div>
 			<div class="testo">
 				<a href="logininglese.html">LOGIN</a>
