--- a/sito/INGLESE/serra1baseinglese.html
+++ b/sito/INGLESE/serra1baseinglese.html
@@ -121,7 +121,7 @@
 
                     <div class="a1">
                         <img src="../immagini/Logo medio.png" class="alogo2" />
-                        <h3 class="atitle">MEDIA VERSION</h3>
+                        <h3 class="atitle">MEDIUM VERSION</h3>
                         <hr class="ahr" />
                         <p class="ap">Warranty: 3 years</p>
                         <p class="ap">Arduino</p>
