--- a/sito/ITALIANO/chisiamo.html
+++ b/sito/ITALIANO/chisiamo.html
@@ -96,9 +96,12 @@
 							<h1> Il nostro team</h1>
 								<div class="filaimmagini">
 									<img class="inlineclasse" src="../immagini/Albanese Paolo.png" />
-									<img class="inlineclasse" src="../immagini/Alberto Impagliazzo.png" />
-									<img class="inlineclasse" src="../immagini/Alessandro Fusari.png" />
-									<p style="text-align: right; margin-right: 660px;">Albanese Paolo</p>
+									<img class="inlineclasse" src="../immagini/Aristarco Michael.png" />
+									<img class="inlineclasse" src="../immagini/Beneventi Alex" />
+									<span style="text-align: right; margin-right: 660px;">Albanese Paolo</span>
+									<span style="text-align: right; margin-right: 690px;">Tester</span>
+									<span style="text-align: right; margin-right: 400px;">Albanese Paolo</span>
+									<span style="text-align: right; margin-right: 600px;">Tester</span>
 									<img class="inlineclasse" src="../immagini/Alex Rossi.png" />
 									<img class="inlineclasse" src="../immagini/Federico Meliani.png" />							
 									<img class="inlineclasse" src="../immagini/Federico Savani.png" />							
