--- a/sito/INGLESE/inostriprodottiinglese.html
+++ b/sito/INGLESE/inostriprodottiinglese.html
@@ -36,8 +36,8 @@
 						<a class="lingua">Language</a> <!-- primo list-item, prima voce del menu -->
 						<ul>
 							<!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="index.html">Italian</a></li>
-							<li><a href="../inglese/indexinglese.html">English</a></li>
+							<li><a href="../italiano/index.html">Italian</a></li>
+							<li><a href="indexinglese.html">English</a></li>
 						</ul> <!-- Fine del sotto-menu -->
 					</li> <!-- Chiudo il list-item -->
 					<!--qui altri list-item -->
@@ -132,7 +132,6 @@
 				<a href="https://www.facebook.com/people/Sprout-Carpi/100078603526319/" target="new_blank"><img src="../immagini/logo facebook.png" class="imf" /></a>
 				<a href="https://www.instagram.com/sproutcarpiofficial/" target="new_blank"><img src="../immagini/logo insta 2.png" class="imi" /></a>
 				<a href="https://twitter.com/CarpiSprout" target="new_blank"><img src="../immagini/logo twitter.png" class="imt" /></a>
-
 			</div>
 		</section>
 		</section>
