--- a/sito/ITALIANO/chisiamo.html
+++ b/sito/ITALIANO/chisiamo.html
@@ -94,42 +94,14 @@
 						</div>
 						<div>
 							<h1> Il nostro team</h1>
-								<div class="filaimmagini">
-									<img class="inlineclasse" src="../immagini/Albanese Paolo.png" />
-									<img class="inlineclasse" src="../immagini/Aristarco Michael.png" />
-									<img class="inlineclasse" src="../immagini/Beneventi Alex" />
-									<span style="text-align: right; margin-right: 660px;">Albanese Paolo</span>
-									<span style="text-align: right; margin-right: 690px;">Tester</span>
-									<span style="text-align: right; margin-right: 400px;">Albanese Paolo</span>
-									<span style="text-align: right; margin-right: 600px;">Tester</span>
-									<img class="inlineclasse" src="../immagini/Alex Rossi.png" />
-									<img class="inlineclasse" src="../immagini/Federico Meliani.png" />							
-									<img class="inlineclasse" src="../immagini/Federico Savani.png" />							
-									<img class="inlineclasse" src="../immagini/Ispani Filippo.png" />
-									<img class="inlineclasse" src="../immagini/Lorenzo Bergianti.png" />
-									<img class="inlineclasse" src="../immagini/Marco Galavotti.png" />
-									<img class="inlineclasse" src="../immagini/Nicholas Giacobbe.png" />
-									<img class="inlineclasse" src="../immagini/Raimond Paraschiv.png" />
-									<img class="inlineclasse" src="../immagini/Rascutoi Emanuel.png" />
-									<img class="inlineclasse" src="../immagini/Rebecchi Simone.png" />
-									<img class="inlineclasse" src="../immagini/Rossi Achille.png" />
-									<img class="inlineclasse" src="../immagini/Rossi Matteo.png" />
-									<img class="inlineclasse" src="../immagini/Tommaso Curto.png" />
-									<img class="inlineclasse" src="../" />
-									<img class="inlineclasse" src="../" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
-									<img class="inlineclasse" src="" />
+								<div>
+									<div>
+										<figure>
+											<img  src="../immagini/Aristarco Michael.png" width="200px" height="200px"/>
+											<figcaption style="text-align: center;">vnjfnv</figcaption>
+											<figcaption style="text-align: center;">gtegr</figcaption>
+										</figure>
+									</div>
 								</div>
 						</div>
 
