--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -81,15 +81,15 @@
                             </div>
                         </a>
                         <div class="caselle">
-                            <img class="img" src="../../immagini/arduino.jpg">
+                            <img class="img" src="../immagini/arduino.jpg">
                             <figcaption>Arduino<br />scheda Arduino 1.0</figcaption>
                         </div>
                         <div class="caselle">
-                            <img class="img" src="../../immagini/breadbrd.JPG">
+                            <img class="img" src="../immagini/breadboar.jpg">
                             <figcaption>breadboard<br />scheda breadboard collegata</figcaption>
                         </div>
                         <div class="caselle">
-                            <img class="img" src="../../immagini/sens temp.jpg">
+                            <img class="img" src="../immagini/senstemp.jpg">
                             <figcaption>sensore temperatura<br />sensori diversi utilizzi</figcaption>
                         </div>
                         <div class="caselle">
@@ -97,7 +97,7 @@
                             <figcaption>servomotore X4<br />prova prova</figcaption>
                         </div>
                         <div class="caselle">
-                            <img class="img" src="../../immagini/sens umidita.JPG">
+                            <img class="img" src="../immagini/sensum.jpg">
                             <figcaption>sensore di umidità<br />sensore dato all'umidità</figcaption>
                         </div>
                         <div class="caselle">
@@ -105,11 +105,11 @@
                             <figcaption>sensore bluethoot<br />sensore dato al collegamento</figcaption>
                         </div>
                         <div class="caselle">
-                            <img class="img" src="../../immagini/fotoresistore.JPG">
+                            <img class="img" src="../immagini/fotoresistore.jpg">
                             <figcaption>fotoresistore<br />boh boh boh</figcaption>
                         </div>
                         <div class="caselle">
-                            <img class="img" src="../../immagini/pompa.JPG">
+                            <img class="img" src="../immagini/pompa.png">
                             <figcaption>pompa irrigazione<br />boh bih</figcaption>
                         </div>
                     </div>
