--- a/sito/ITALIANO/arduionoallabase.html
+++ b/sito/ITALIANO/arduionoallabase.html
@@ -18,6 +18,8 @@
 		<meta name = "description" content="..." />
 		<meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
 		<link href="../style.css" type="text/css" rel="stylesheet" />
+		<link href="arduinoallabase.css" type="text/css" rel="stylesheet" />
+		
 		<link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 		<link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 		<link rel="icon" type="image/x-icon" href="../immagini/logo.png">
@@ -85,8 +87,17 @@
 					<div class="leftSide"></div>
 					<div class="body">
 						<div class="centercaselle">
+							<h1>SCARICA IL FILE C DEI GRAFICI</h1>
+							<a href="file c.zip" download="file c.zip">
+						
+							<div class="caselle">
+								<img class="img" src="../immagini/download.png">
+								   <figcaption>File C dei grafici<br />SCARICA IL PROGETTO</figcaption>
+							</div>
+						</a>
 							<h1>SCARICA I NOSTRI PROGETTI ARDUINO UFFICIALI</h1>
 							<a href="Datasheet sensore temperatura.docx.pdf" download="Datasheet sensore temperatura.docx.pdf"></a>
+						
                             	<div class="caselle">
                                 	<img class="img" src="../immagini/download.png">
                                		<figcaption>Progetto 1 Arduino<br />SCARICA IL PROGETTO</figcaption>
@@ -577,7 +588,7 @@
 							<div class="box__input">
 							<svg class="box__icon" xmlns="http://www.w3.org/2000/svg" width="50" height="43" viewBox="0 0 50 43"><path d="M48.4 26.5c-.9 0-1.7.7-1.7 1.7v11.6h-43.3v-11.6c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v13.2c0 .9.7 1.7 1.7 1.7h46.7c.9 0 1.7-.7 1.7-1.7v-13.2c0-1-.7-1.7-1.7-1.7zm-24.5 6.1c.3.3.8.5 1.2.5.4 0 .9-.2 1.2-.5l10-11.6c.7-.7.7-1.7 0-2.4s-1.7-.7-2.4 0l-7.1 8.3v-25.3c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v25.3l-7.1-8.3c-.7-.7-1.7-.7-2.4 0s-.7 1.7 0 2.4l10 11.6z" /></svg>
 							<input type="file" name="files[]" id="file" class="box__file" data-multiple-caption="{count} files selected" multiple />
-							<label for="file"><strong>Seleziona file</strong><span class="box__dragndrop"> o trascina qui</span>.</label>
+							<label for="file"><strong>Hai qualche file da caricare?</strong><span class="box__dragndrop"> Trascina qui</span>.</label>
 							<button type="submit" class="box__button">Upload</button>
 							</div>
 							<div class="box__uploading">Uploading&hellip;</div>
