--- a/sito/INGLESE/serra1baseinglese.html
+++ b/sito/INGLESE/serra1baseinglese.html
@@ -85,7 +85,7 @@
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Our greenhouse is procjected to statisfy every type of customer: from the people that want to save money to the ones that want a completely indipendent greenhouse. You can choose three different models, one dedicated for save money, one version semi-independent and cheap and one completely indipendent.</p>
+                        <p class="testobase">Our greenhouse is projected to statisfy every type of customer: from the people that want to save money to the ones that want a completely indipendent greenhouse. You can choose three different models, one dedicated for save money, one version semi-independent and cheap and one completely indipendent.</p>
                     </div>
 
                 </div>
