--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -82,35 +82,35 @@
                         </a>
                         <div class="caselle">
                             <img class="img" src="../immagini/arduino.jpg">
-                            <figcaption>Arduino<br />scheda Arduino 1.0</figcaption>
+                            <a href="arduino.html"><figcaption>Arduino<br />scheda Arduino 1.0</figcaption></a>
                         </div>
                         <div class="caselle">
                             <img class="img" src="../immagini/breadboar.jpg">
-                            <figcaption>breadboard<br />scheda breadboard collegata</figcaption>
+                            <a href="breadboard.html"><figcaption>breadboard<br />scheda breadboard collegata</figcaption></a>
                         </div>
                         <div class="caselle">
                             <img class="img" src="../immagini/senstemp.jpg">
-                            <figcaption>sensore temperatura<br />sensori diversi utilizzi</figcaption>
+                            <a href="sensoretemperatura.html"><figcaption>sensore temperatura<br />sensori diversi utilizzi</figcaption></a>
                         </div>
                         <div class="caselle">
                             <img class="img" src="../../immagini/motore.JPG">
-                            <figcaption>servomotore X4<br />prova prova</figcaption>
+                            <a href="servomotore.html"><figcaption>servomotore X4<br />prova prova</figcaption></a>
                         </div>
                         <div class="caselle">
                             <img class="img" src="../immagini/sensum.jpg">
-                            <figcaption>sensore di umidità<br />sensore dato all'umidità</figcaption>
+                            <a href="sensorediumidità.html"><figcaption>sensore di umidità<br />sensore dato all'umidità</figcaption></a>
                         </div>
                         <div class="caselle">
                             <img class="img" src="../../immagini/sens blut.JPG">
-                            <figcaption>sensore bluethoot<br />sensore dato al collegamento</figcaption>
+                            <a href="sensorebluetooth.html"><figcaption>sensore bluetooth<br />sensore dato al collegamento</figcaption></a>
                         </div>
                         <div class="caselle">
                             <img class="img" src="../immagini/fotoresistore.jpg">
-                            <figcaption>fotoresistore<br />boh boh boh</figcaption>
+                            <a href="fotoresistore.html"><figcaption>fotoresistore<br />boh boh boh</figcaption></a>
                         </div>
                         <div class="caselle">
                             <img class="img" src="../immagini/pompa.png">
-                            <figcaption>pompa irrigazione<br />boh bih</figcaption>
+                            <a href="pompadiirrigazione.html"><figcaption>pompa irrigazione<br />boh bih</figcaption></a>
                         </div>
                     </div>
                     </div>
