--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -93,7 +93,7 @@
                             <a href="sensoretemperatura.html"><figcaption>sensore temperatura<br />sensori diversi utilizzi</figcaption></a>
                         </div>
                         <div class="caselle">
-                            <img class="img" src="../../immagini/motore.JPG">
+                            <img class="img" src="../immagini/servomotore.jpg">
                             <a href="servomotore.html"><figcaption>servomotore X4<br />prova prova</figcaption></a>
                         </div>
                         <div class="caselle">
@@ -101,8 +101,8 @@
                             <a href="sensorediumidità.html"><figcaption>sensore di umidità<br />sensore dato all'umidità</figcaption></a>
                         </div>
                         <div class="caselle">
-                            <img class="img" src="../../immagini/sens blut.JPG">
-                            <a href="sensorebluetooth.html"><figcaption>sensore bluetooth<br />sensore dato al collegamento</figcaption></a>
+                            <img class="img" src="../immagini/bluetht.jpg">
+                            <a href="sensorebluetooth.html"><figcaption>modulo bluetooth<br />sensore dato al collegamento</figcaption></a>
                         </div>
                         <div class="caselle">
                             <img class="img" src="../immagini/fotoresistore.jpg">
