--- a/sito/ITALIANO/index.html
+++ b/sito/ITALIANO/index.html
@@ -81,7 +81,7 @@
 				  <a href ="inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
-					<a href="arduionoallabase.html">ARDUINO</a>
+					<a href="arduionoallabase.html">DOWNLOAD</a>
 				</div>
 				<div class="testo">
 					<a href="login.html">LOGIN</a>
