--- a/sito/ITALIANO/arduionoallabase.html
+++ b/sito/ITALIANO/arduionoallabase.html
@@ -73,7 +73,7 @@
 				  <a href ="inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
-					<a href="arduionoallabase.html" class="menuz">ARDUINO</a>
+					<a href="arduionoallabase.html" class="menuz">DOWNLOAD</a>
 				</div>
 				<div class="testo">
 					<a href="login.html">LOGIN</a>
