--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -60,7 +60,7 @@
                   <a href ="inostriprodotti.html" class = "menuz">I NOSTRI PRODOTTI</a>
                 </div>
                 <div class="testo">
-                    <a href="arduionoallabase.html">ARDUINO</a>
+                    <a href="arduionoallabase.html">DOWNLOAD</a>
                 </div>
                 <div class="testo">
                     <a href="login.html">LOGIN</a>
