--- a/sito/ITALIANO/fotoresistore.html
+++ b/sito/ITALIANO/fotoresistore.html
@@ -10,7 +10,7 @@
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     <link rel="icon" type="image/x-icon" href="../immagini/logo.png">
-    <link href="serra1base.css" type="text/css" rel="stylesheet" />
+    <link href="login.css" type="text/css" rel="stylesheet" />
 </head>
 
 
@@ -80,12 +80,16 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio" src="" width="250px" height="300px" />
-                    <div class="titolodettaglio"> Serra 1.0 marchio S P R O UT</div>
+                    <img class="imgdettaglio2" src="" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> Arduino 1.0 </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">La nostra mini-serra è stata progettata per soddisfare tutti i tipi di clienti: dalle persone che vogliono risparmiare a quelle che vogliono una serra completamente indipendente. Puoi scegliere tra tre modelli differenti, uno dedicato al risparmi, una versione semi-indipendente ed economica e una progettata per essere completamente indipendente.</p>
+                        <p class="testobase">Arduino &egrave; un sistema hardware composto da una serie di schede elettroniche dotate di un microprocessore a 8-bit AVR.</p>
+                        <p class="aprezzo">24,99 &euro;</p>
+                        <div class="abuy3">
+                            <p><strong>COMPRA</strong></p>
+                        </div>
                     </div>
 
                 </div>
