--- a/sito/ITALIANO/breadboard.html
+++ b/sito/ITALIANO/breadboard.html
@@ -80,13 +80,13 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio2" src="" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Arduino 1.0 </div>
+                    <img class="imgdettaglio2" src="../immagini/breadboar.jpg" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> BreadBoard </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Arduino &egrave; un sistema hardware composto da una serie di schede elettroniche dotate di un microprocessore a 8-bit AVR.</p>
-                        <p class="aprezzo">24,99 &euro;</p>
+                        <p class="testobase">La BreadBoard &egrave; uno circuito stampato utilizzato per creare prototipi di circuiti elettrici. Consiste in una base di plastica con dei fori collegati elettricamente mediante delle clip metaliche. La distanza di ogni foro &egrave; di 2,54 mm.</p>
+                        <p class="aprezzo">0,35 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
                         </div>
