--- a/sito/ITALIANO/arduino.html
+++ b/sito/ITALIANO/arduino.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>SPROUT</title>
-    <meta charset="UTF-8" />
+    <meta charset = "UTF-8" >
     <meta name="author" content="3ci diurno" />
     <meta name="description" content="..." />
     <meta name="keywords" content="ITIS vinci, Serra, Arduino, PCTO, green, bio, natura, tech, informatica, verde, piante, arduino, serra-arduino" />
@@ -52,7 +52,7 @@
 
         <hr class="a" />
         <div id="menu">
-            <!--Menù di navigazione-->
+            <!--Menï¿½ di navigazione-->
             <div class="testo">
                 <a href="index.html">MEN&Ugrave;</a>
             </div>
@@ -86,7 +86,7 @@
                 <div>
                     <div class="rt">
                         <p class="testobase">Arduino &egrave; un sistema hardware composto da una serie di schede elettroniche dotate di un microprocessore a 8-bit AVR.</p>
-                        <p class="aprezzo">24,99 &euro;</p>
+                        <p class="aprezzo">4,99 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
                         </div>
