--- a/sito/ITALIANO/sensoretemperatura.html
+++ b/sito/ITALIANO/sensoretemperatura.html
@@ -80,13 +80,13 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio2" src="" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Arduino 1.0 </div>
+                    <img class="imgdettaglio2" src="../immagini/senstemp.jpg" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> Sensore di Temperatura </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Arduino &egrave; un sistema hardware composto da una serie di schede elettroniche dotate di un microprocessore a 8-bit AVR.</p>
-                        <p class="aprezzo">24,99 &euro;</p>
+                        <p class="testobase">Il sensore di temperature &egrave; un componente che rileva e misura la variazione di temperatura in rapporto tra la temperatura e la resistenza del materiale.</p>
+                        <p class="aprezzo">7,00 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
                         </div>
