--- a/sito/ITALIANO/servomotore.html
+++ b/sito/ITALIANO/servomotore.html
@@ -80,13 +80,13 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio2" src="" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Arduino 1.0 </div>
+                    <img class="imgdettaglio2" src="../immagini/servomotore.jpg" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> Servomotore X4 </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Arduino &egrave; un sistema hardware composto da una serie di schede elettroniche dotate di un microprocessore a 8-bit AVR.</p>
-                        <p class="aprezzo">24,99 &euro;</p>
+                        <p class="testobase">Il servomotore &egrave; un tipo di motore che permette, anche per le sue piccole dimensioni, un lavoro ampio sulla velocit&agrave;, sulla coppia motrice, sull'accelerazione angolare, sulla durata del ciclo operativo e sulla velocit&agrave; angolare.</p>
+                        <p class="aprezzo">3,75 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
                         </div>
