--- a/sito/ITALIANO/login.html
+++ b/sito/ITALIANO/login.html
@@ -60,10 +60,10 @@
       <hr class = "a" />
       <div id="menu"> <!--Menù di navigazione-->
 				<div class="testo">
-					<a href = "index.html">MEN&Ugrave;</a>
+					<a href = "index.html">HOME</a>
 				</div>
 				<div class="testo">
-					<a href="modellografico.html" class="grafico">GRAFICI</a>
+					<a href="modellografico.html" >GRAFICI</a>
        </div>
 				<div class="testo">
 					<a href="chisiamo.html">CHI SIAMO</a>
@@ -72,7 +72,7 @@
 				  <a href ="inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
-					<a href="arduionoallabase.html" class="menuz">DOWNLOAD	</a>
+					<a href="arduionoallabase.html">DOWNLOAD	</a>
 				</div>
 				<div class="testo">
 					<a href="login.html" class = "menuz">LOGIN</a>
