--- a/sito/ITALIANO/index.html
+++ b/sito/ITALIANO/index.html
@@ -69,10 +69,10 @@
       <hr class = "a" />
       <div id="menu"> <!--Menù di navigazione-->
 				<div class="testo">
-					<a href = "index.html" class = "menuz">MEN&Ugrave;</a>
+					<a href = "index.html" class = "menuz">HOME</a>
 				</div>
 				<div class="testo">
-					<a href="modellografico.html" class="grafico">GRAFICI</a>
+					<a href="modellografico.html">GRAFICI</a>
        </div>
 				<div class="testo">
 					<a href="chisiamo.html">CHI SIAMO</a>
