--- a/sito/ITALIANO/modellografico.html
+++ b/sito/ITALIANO/modellografico.html
@@ -42,10 +42,10 @@
       <hr class = "a" />
       <div id="menu"> <!--Menù di navigazione-->
 				<div class="testo">
-					<a href="index.html">MEN&Ugrave;</a>
+					<a href="index.html">HOME</a>
 				</div>
 				<div class="testo">
-              <a href="modellografico.html" class="menuz">GRAFICI</a>
+              <a href="modellografico.html" >GRAFICI</a>
        </div>
 				<div class="testo">
 					<a href="chisiamo.html">CHI SIAMO</a>
