--- a/sito/ITALIANO/sensorediumidità.html
+++ b/sito/ITALIANO/sensorediumidità.html
@@ -52,9 +52,9 @@
 
         <hr class="a" />
         <div id="menu">
-            <!--Men˘ di navigazione-->
+            <!--MenÔøΩ di navigazione-->
             <div class="testo">
-                <a href="index.html">MEN&Ugrave;</a>
+                <a href="index.html">HOME</a>
             </div>
             <div class="testo">
                 <a href="modellografico.html" class="grafico">GRAFICI</a>
@@ -81,11 +81,11 @@
             <div class="body">
                 <div>
                     <img class="imgdettaglio2" src="" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Arduino 1.0 </div>
+                    <div class="titolodettaglio2"> Sensore di Umidit&agrave; </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Arduino &egrave; un sistema hardware composto da una serie di schede elettroniche dotate di un microprocessore a 8-bit AVR.</p>
+                        <p class="testobase">Il sensore di umidit√† viene usato per permettere di trasformare il parametro "umidit&agrave; relativa", in poche parole per misurare l'umidit&agrave; nell'ambiente, e trasformarlo in un segnale elettrico.</p>
                         <p class="aprezzo">24,99 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
