--- a/sito/ITALIANO/arduionoallabase.html
+++ b/sito/ITALIANO/arduionoallabase.html
@@ -95,26 +95,14 @@
 								   <figcaption>File C dei grafici<br />SCARICA IL PROGETTO</figcaption>
 							</div>
 						</a>
-							<h1>SCARICA I NOSTRI PROGETTI ARDUINO UFFICIALI</h1>
-							<a href="Datasheet sensore temperatura.docx.pdf" download="Datasheet sensore temperatura.docx.pdf"></a>
+							<h1>SCARICA IL NOSTRO PROGETTO ARDUINO UFFICIALE</h1>
+							<a href="progettofinale.zip" download="progettofinale.zip">
 						
                             	<div class="caselle">
                                 	<img class="img" src="../immagini/download.png">
-                               		<figcaption>Progetto 1 Arduino<br />SCARICA IL PROGETTO</figcaption>
+                               		<figcaption>Progetto Finale Arduino<br />SCARICA IL PROGETTO</figcaption>
 								</div>
 							</a>
-						<a href="prova.zip" download="prova.zip">
-                            <div class="caselle">
-                                <img class="img" src="../immagini/download.png">
-                                <figcaption>Progetto 2 Arduino<br />SCARICA IL PROGETTO</figcaption>
-                            </div>
-						</a>
-						<a href="prova.zip" download="prova.zip">
-                            <div class="caselle">
-                                <img class="img" src="../immagini/download.png">
-                                <figcaption>Progetto 3 Arduino<br />SCARICA IL PROGETTO</figcaption>
-                            </div>
-						</a>
 
 
 						<h1>APRI I NOSTRI DATASHEET UFFICIALI</h1>
