--- a/sito/ITALIANO/chisiamo.html
+++ b/sito/ITALIANO/chisiamo.html
@@ -138,7 +138,7 @@
 									</div>
 									<div class="avatar">
 										<figure>
-											<img  src="../immagini/Marco Galavotti.png" width="200px" height="200px"/>
+											<img  src="../immagini/Galavotti Marco.png" width="200px" height="200px"/>
 											<figcaption style="text-align: center;">Galavotti Marco</figcaption>
 											<figcaption style="text-align: center;">gtegr</figcaption>
 										</figure>
@@ -166,7 +166,7 @@
 									</div>
 									<div class="avatar">
 										<figure>
-											<img  src="../immagini/Alberto Impagliazzo.png" width="200px" height="200px"/>
+											<img  src="../immagini/Impagliazzo Alberto.png" width="200px" height="200px"/>
 											<figcaption style="text-align: center;">Impagliazzo Alberto</figcaption>
 											<figcaption style="text-align: center;">gtegr</figcaption>
 										</figure>
@@ -180,7 +180,7 @@
 									</div>
 									<div class="avatar">
 										<figure>
-											<img  src="../immagini/Flavio Koci.png" width="200px" height="200px"/>
+											<img  src="../immagini/Koci Flavio.png" width="200px" height="200px"/>
 											<figcaption style="text-align: center;">Koci Flavio</figcaption>
 											<figcaption style="text-align: center;">gtegr</figcaption>
 										</figure>
@@ -229,7 +229,7 @@
 									</div>
 									<div class="avatar">
 										<figure>
-											<img  src="../immagini/Alex Rossi.png" width="200px" height="200px"/>
+											<img  src="../immagini/Rossi Alex.png" width="200px" height="200px"/>
 											<figcaption style="text-align: center;">Rossi Alex</figcaption>
 											<figcaption style="text-align: center;">gtegr</figcaption>
 										</figure>
